# paper-extract

./: Cargo.toml  justfile  schema.csv
.github/workflows/: release.yml
examples/bone-grafting/: README.md  schema.csv
examples/bone-grafting/papers/: abramo-2008-osteotomy-of-dorsally-displaced-malunited.csv  henry-2007-immediate-mobilization-following-co.csv  kilic-2011-fixed-angle-volar-plates-in-co.csv  mahmoud-2012-correction-of-dorsally-malunited-extraarticular-distal-radial-fractures.csv  miyake-2011-distal-radius-osteotomy.csv  opel-2013-corrective-dr-osteotomy.csv  ozer-2011-the-role-of-bone-allografts-in-the-treatment-of-angular-malunions-of-the-dr.csv  pecache-2021-corrective-osteotomy-of-distal-radius-malunion.csv  robinson-2021-simplying-the-volar-distraction-osteotomy-for-distal-radius.csv  rothenfluh-2013-opening-wedge-osteotomy-for-distal-radius-malunion.csv  scheer-2015-non-union-in-3-of-15-osteotomies.csv  tarallo-2014-malunited-extra-articular-dr.csv
src/: main.rs  prompt.md  prompt.rs  schema.rs
