[package]
name = "paper-extract"
version = "0.1.0"
edition = "2024"

[dependencies]


[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
restriction = { level = "warn", priority = -1 }

cargo_common_metadata = "allow"
missing_docs_in_private_items = "allow"
blanket_clippy_restriction_lints = "allow"
arbitrary_source_item_ordering = "allow"
expect_used = "allow"
implicit_return = "allow"
mod_module_files = "allow"
multiple_crate_versions = "allow"
print_stdout = "allow"
question_mark_used = "allow"
single_call_fn = "allow"
single_char_lifetime_names = "allow"
std_instead_of_core = "allow"
unwrap_used = "allow"
