[package]
name = "paper-extract"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
base64 = "0.22"
clap = { version = "4.5.45", features = ["derive"] }


[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
restriction = { level = "deny", priority = -1 }

arbitrary_source_item_ordering = "allow"
blanket_clippy_restriction_lints = "allow"
cargo_common_metadata = "allow"
expect_used = "allow"
implicit_return = "allow"
indexing_slicing = "allow"
min_ident_chars = "allow"
missing_docs_in_private_items = "allow"
mod_module_files = "allow"
multiple_crate_versions = "allow"
option_if_let_else = "allow"
panic = "allow"
print_stderr = "allow"
print_stdout = "allow"
question_mark_used = "allow"
single_call_fn = "allow"
single_char_lifetime_names = "allow"
std_instead_of_alloc = "allow"
std_instead_of_core = "allow"
unwrap_used = "allow"
missing_trait_methods = "allow"
